--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/fallback-font-awesome"]
 	path = lib/fallback-font-awesome
-	url = https://github.com/FortAwesome/Font-Awesome/
+	url = https://github.com/MickeyKay/Font-Awesome.git
