--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name": "MickeyKay/better-font-awesome-library",
     "description": "Better Font Awesome Library for PHP",
+    "license": "GPL-2.0",
     "require": {
         "itsjavi/fontawesome-iconpicker": "1.3",
         "fortawesome/font-awesome": "4.7"
