Add npm install script and update paths

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
     "require": {
         "itsjavi/fontawesome-iconpicker": "1.3",
         "fortawesome/font-awesome": "4.7"
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "npm install"
+        ]
     }
 }
