--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "description": "Better Font Awesome Library",
   "version": "1.4.5",
   "main": " ",
-  "devDependencies": {},
+  "devDependencies": {
+    "font-awesome": "4.7.0",
+    "fontawesome-iconpicker": "1.3.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2"
+  },
   "scripts": {
-    "test": " "
+    "build": "npm install && grunt"
   },
   "repository": {
     "type": "git",
@@ -18,14 +24,10 @@
     "library",
     "WordPress"
   ],
-  "author": "Mickey Kay <mickeyskay@gmail.com> (http://mickeykaycreative.com/)",
+  "author": "Mickey Kay <mickeyskay@gmail.com> (http://mickeykay.me/)",
   "license": "GPL-2.0",
   "bugs": {
     "url": "https://github.com/MickeyKay/better-font-awesome-library/issues"
   },
-  "homepage": "https://github.com/MickeyKay/better-font-awesome-library#readme",
-  "dependencies": {
-    "font-awesome": "4.7.0",
-    "fontawesome-iconpicker": "1.3.0"
-  }
+  "homepage": "https://github.com/MickeyKay/better-font-awesome-library#readme"
 }
