--- a/lib/fontawesome-iconpicker/package.json
+++ b/lib/fontawesome-iconpicker/package.json
@@ -1,15 +1,17 @@
 {
   "name": "fontawesome-iconpicker",
-  "version": "1.3.0",
+  "version": "3.0.0",
   "description": "Font Awesome Icon Picker plugin for Twitter Bootstrap",
-  "homepage": "https://itsjavi.com/fontawesome-iconpicker/",
+  "homepage": "https://farbelous.github.io/fontawesome-iconpicker/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:itsjavi/fontawesome-iconpicker.git"
+    "url": "git@github.com:farbelous/fontawesome-iconpicker.git"
   },
+  "author": "Javi Aguilar",
+  "license": "MIT",
   "main": "dist/js/fontawesome-iconpicker.js",
   "bugs": {
-    "url": "https://github.com/itsjavi/fontawesome-iconpicker/issues"
+    "url": "https://github.com/farbelous/fontawesome-iconpicker/issues"
   },
   "keywords": [
     "bootstrap",
@@ -18,21 +20,17 @@
     "popover",
     "picker"
   ],
-  "author": "Javi Aguilar",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/itsjavi/fontawesome-iconpicker/blob/master/LICENSE"
-    }
-  ],
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "~0.11.2",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-http-download": "^0.1.0",
     "grunt-jsbeautifier": "~0.2.7",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-string-replace": "^1.3.1",
+    "grunt-yaml": "^0.4.2"
   }
 }
