Initial pass at simplication + GraphQL

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
 	"name": "mickey-kay/better-font-awesome-library",
-	"description": "Better Font Awesome Library for PHP",
+	"description": "Better Font Awesome Library for WordPress",
 	"license": "GPL-2.0",
 	"require": {
-		"mustangostang/spyc": "^0.6.2"
 	}
 }
