--- a/lib/fontawesome-iconpicker/package.json
+++ b/lib/fontawesome-iconpicker/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "fontawesome-iconpicker",
-  "version": "3.0.0",
-  "description": "Font Awesome Icon Picker plugin for Twitter Bootstrap",
-  "homepage": "https://farbelous.github.io/fontawesome-iconpicker/",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:farbelous/fontawesome-iconpicker.git"
+  "_from": "fontawesome-iconpicker@3.0.0",
+  "_id": "fontawesome-iconpicker@3.0.0",
+  "_inBundle": false,
+  "_integrity": "sha512-p8WBguQEow7t+uYPf3IUlSKEYOIrlY3/LqM56T6bxZRcqS1+8RRXHFlzUQI/s/fqLy6GzDviqvDzcLFvLDD+LA==",
+  "_location": "/fontawesome-iconpicker",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "fontawesome-iconpicker@3.0.0",
+    "name": "fontawesome-iconpicker",
+    "escapedName": "fontawesome-iconpicker",
+    "rawSpec": "3.0.0",
+    "saveSpec": null,
+    "fetchSpec": "3.0.0"
   },
-  "author": "Javi Aguilar",
-  "license": "MIT",
-  "main": "dist/js/fontawesome-iconpicker.js",
+  "_requiredBy": [
+    "#DEV:/"
+  ],
+  "_resolved": "https://registry.npmjs.org/fontawesome-iconpicker/-/fontawesome-iconpicker-3.0.0.tgz",
+  "_shasum": "689be496bf6ab8df539b849f2c2f6be3e209590e",
+  "_spec": "fontawesome-iconpicker@3.0.0",
+  "_where": "/Users/mickey/vagrant-local/www/wordpress-one/public_html/wp-content/plugins/better-font-awesome/vendor/mickey-kay/better-font-awesome-library",
+  "author": {
+    "name": "Javi Aguilar"
+  },
   "bugs": {
     "url": "https://github.com/farbelous/fontawesome-iconpicker/issues"
   },
-  "keywords": [
-    "bootstrap",
-    "fontawesome",
-    "iconpicker",
-    "popover",
-    "picker"
-  ],
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "Font Awesome Icon Picker plugin for Twitter Bootstrap",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
@@ -32,5 +43,21 @@
     "grunt-jsbeautifier": "~0.2.7",
     "grunt-string-replace": "^1.3.1",
     "grunt-yaml": "^0.4.2"
-  }
+  },
+  "homepage": "https://farbelous.github.io/fontawesome-iconpicker/",
+  "keywords": [
+    "bootstrap",
+    "fontawesome",
+    "iconpicker",
+    "popover",
+    "picker"
+  ],
+  "license": "MIT",
+  "main": "dist/js/fontawesome-iconpicker.js",
+  "name": "fontawesome-iconpicker",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/farbelous/fontawesome-iconpicker.git"
+  },
+  "version": "3.0.0"
 }
