--- a/lib/fontawesome-iconpicker/package.json
+++ b/lib/fontawesome-iconpicker/package.json
@@ -1,18 +1,51 @@
 {
-  "name": "fontawesome-iconpicker",
-  "version": "3.0.0",
-  "description": "Font Awesome Icon Picker plugin for Twitter Bootstrap",
-  "homepage": "https://farbelous.github.io/fontawesome-iconpicker/",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:farbelous/fontawesome-iconpicker.git"
+  "_from": "fontawesome-iconpicker@latest",
+  "_id": "fontawesome-iconpicker@3.2.0",
+  "_inBundle": false,
+  "_integrity": "sha512-faI7fhGmO61u1WnYpFoHZ1OiL1xQo8KfX3ranq50KkDz5Jh/klaVjf8vhedQIJquVV28GJ61e/MChRTpQ6POTw==",
+  "_location": "/fontawesome-iconpicker",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "fontawesome-iconpicker@latest",
+    "name": "fontawesome-iconpicker",
+    "escapedName": "fontawesome-iconpicker",
+    "rawSpec": "latest",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
-  "author": "Javi Aguilar",
-  "license": "MIT",
-  "main": "dist/js/fontawesome-iconpicker.js",
+  "_requiredBy": [
+    "#DEV:/",
+    "#USER"
+  ],
+  "_resolved": "https://registry.npmjs.org/fontawesome-iconpicker/-/fontawesome-iconpicker-3.2.0.tgz",
+  "_shasum": "48b535ec1cc077f00b8d63b659eb03da7d72d972",
+  "_spec": "fontawesome-iconpicker@latest",
+  "_where": "/Users/mickey/vagrant-local/www/wordpress-one/public_html/wp-content/plugins/better-font-awesome/vendor/mickey-kay/better-font-awesome-library",
+  "author": {
+    "name": "Javi Aguilar"
+  },
   "bugs": {
     "url": "https://github.com/farbelous/fontawesome-iconpicker/issues"
   },
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "Font Awesome Icon Picker plugin for Twitter Bootstrap",
+  "devDependencies": {
+    "grunt": "^1.0.3",
+    "grunt-contrib-clean": "^0.5",
+    "grunt-contrib-concat": "^0.4",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-http-download": "^0.1",
+    "grunt-jsbeautifier": "^0.2",
+    "grunt-string-replace": "^1.3",
+    "grunt-yaml": "^0.4"
+  },
+  "homepage": "https://farbelous.github.io/fontawesome-iconpicker/",
   "keywords": [
     "bootstrap",
     "fontawesome",
@@ -20,17 +53,12 @@
     "popover",
     "picker"
   ],
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-less": "~0.11.2",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-http-download": "^0.1.0",
-    "grunt-jsbeautifier": "~0.2.7",
-    "grunt-string-replace": "^1.3.1",
-    "grunt-yaml": "^0.4.2"
-  }
+  "license": "MIT",
+  "main": "dist/js/fontawesome-iconpicker.js",
+  "name": "fontawesome-iconpicker",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/farbelous/fontawesome-iconpicker.git"
+  },
+  "version": "3.2.0"
 }
