--- a/lib/font-awesome/package.json
+++ b/lib/font-awesome/package.json
@@ -1,4 +1,11 @@
 {
+  "_args": [
+    [
+      "font-awesome@4.7.0",
+      "/Users/mickey/vagrant-local/www/wordpress-one/public_html/wp-content/plugins/better-font-awesome/vendor/mickey-kay/better-font-awesome-library"
+    ]
+  ],
+  "_development": true,
   "_from": "font-awesome@4.7.0",
   "_id": "font-awesome@4.7.0",
   "_inBundle": false,
@@ -19,8 +26,7 @@
     "#DEV:/"
   ],
   "_resolved": "https://registry.npmjs.org/font-awesome/-/font-awesome-4.7.0.tgz",
-  "_shasum": "8fa8cf0411a1a31afd07b06d2902bb9fc815a133",
-  "_spec": "font-awesome@4.7.0",
+  "_spec": "4.7.0",
   "_where": "/Users/mickey/vagrant-local/www/wordpress-one/public_html/wp-content/plugins/better-font-awesome/vendor/mickey-kay/better-font-awesome-library",
   "author": {
     "name": "Dave Gandy",
@@ -30,7 +36,6 @@
   "bugs": {
     "url": "http://github.com/FortAwesome/Font-Awesome/issues"
   },
-  "bundleDependencies": false,
   "contributors": [
     {
       "name": "Brian Talbot",
@@ -50,7 +55,6 @@
     }
   ],
   "dependencies": {},
-  "deprecated": false,
   "description": "The iconic font and CSS framework",
   "engines": {
     "node": ">=0.10.3"
