--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mickey-kay/better-font-awesome-library",
     "description": "Better Font Awesome Library for WordPress",
-    "license": "GPL-2.0",
+    "license": "GPL-2.0-or-later",
     "require": {
     }
 }
